--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,39 @@
 # Core LangChain dependencies
-langchain-core
-langchain-community
-langchain-experimental
+langchain-core>=0.1.0
+langchain-community>=0.0.20
+langchain-experimental>=0.0.50
 
 # Google AI integration
-langchain-google-genai
+langchain-google-genai>=1.0.0
 
-# Vector store and database integrations
-langchain-astradb
-langchain-neo4j
-astrapy
-
-# Graph retrieval and processing
-graph-retriever
+# Neo4j integration
+langchain-neo4j>=0.0.5
+neo4j>=5.0.0
 
 # Document processing
-python-docx
-docx2txt
+python-docx>=1.1.0
+docx2txt>=0.8
+pdfplumber>=0.9.0  # For PDF text extraction
+PyMuPDF>=1.23.0    # Alternative PDF processor
 
-# Core Python dependencies
-requests
-numpy
-pandas
+# Vector stores
+chromadb>=0.4.0  # Optional but recommended
 
-# Hashing and utilities
-hashlib2
+# Web framework for API
+flask>=2.3.0
+flask-cors>=4.0.0
+fastapi>=0.100.0
+uvicorn>=0.22.0
+pydantic>=2.0.0
+python-multipart>=0.0.6
 
-# Optional: Enhanced logging and monitoring
-tqdm
-colorlog
+# Core dependencies
+python-dotenv>=1.0.0
+requests>=2.31.0
+numpy>=1.24.0
 
-# Development and testing (optional)
-pytest
-pytest-cov
-black
-flake8
-fastapi
-uvicorn
-pydantic
-python-multipart
+# Development and utilities
+pathlib2>=2.3.7
 
-# Note: Some dependencies may have specific version requirements
-# based on your Python version and system configuration 
+# Note: Make sure you have Python 3.8+ installed
+# Some packages may require specific versions based on your system
